[package]
name = "udownload"
version = "0.1.0"
edition = "2024"
description = "Wrapper around the crate 'ureq' to make downloading files easier."
readme = "README.md"
license = "MIT"
keywords = ["download","cli"]
categories = ["web-programming::http-client", "filesystem"]
exclude = ["example.txt"]
homepage = "https://github.com/Delfi-CH/udownload"
repository = "https://github.com/Delfi-CH/udownload"

[dependencies]
indicatif = {version = "0.18.3", optional = true}
thiserror = "2.0.18"
ureq = "3.1.4"

[dev-dependencies]
mockito = "1.7.2"


[features]
progress-bar = ["dep:indicatif"]